# stream

./: .gitignore  Cargo.toml  Makefile
backend/: Cargo.toml
backend/src/: database.rs  main.rs  storage.rs  tcx.rs
backend/templates/: index.html
common/: Cargo.toml
common/src/: lib.rs
frontend/: Cargo.toml
frontend/src/: lib.rs
src/: main.rs  storage.rs  tcx.rs
tcx/: Cargo.toml
tcx/src/: lib.rs
templates/: index.html
