[package]
name = "stream"
version = "0.1.0"
authors = ["Matthias Vogelgesang"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
askama = { version = "0", default-features = false, features = ["with-rocket"] }
askama_rocket = "0"
chrono = { version = "0", features = ["serde"] }
geo = "0"
itertools = "0"
serde = { version = "1", features = ["derive"] }
serde-xml-rs = "0"
rocket = "0.4"
uom = { version = "0", features = ["f32", "si", "use_serde"] }
