[package]
name = "stream"
version = "0.1.0"
authors = ["Matthias Vogelgesang"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
common = { path = "../common" }
chrono = { version = "0", features = ["serde"] }
hex = "0"
serde = { version = "1", features = ["derive"] }
sha2-const = "0"
rocket = "0.4"
rocket_contrib = { version = "0.4", default-features = false, features = ["serve", "json"] }
tcx = { path = "../tcx" }
uom = { version = "0", features = ["f32", "si", "use_serde"] }
