[package]
name = "common"
version = "0.1.0"
authors = ["Matthias Vogelgesang <matthias.vogelgesang@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geo = { version = "0", features = ["use-serde"] }
chrono = { version = "0", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
tcx = { path = "../tcx" }
uom = { version = "0", features = ["f32", "si", "use_serde"] }
