[package]
name = "frontend"
version = "0.1.0"
authors = ["Matthias Vogelgesang"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1"
chrono = { version = "0" }
common = { path = "../common" }
leaflet = "0"
serde = { version = "1", features = ["derive"] }
wasm-bindgen = { version = "0", features = ["serde-serialize"] }
yew = "0"
uom = { version = "0", features = ["f32", "si", "use_serde"] }
